Fix wrapping in code blocks

--- a/themes/aevum/assets/css/main.css
+++ b/themes/aevum/assets/css/main.css
@@ -19,7 +19,7 @@ h2 {
 
 img {
     display: block;
-    max-width: 500pt;
+    max-width: 550pt;
     margin: auto;
 }
 
@@ -30,8 +30,9 @@ a {
 pre, code {
     font: Deja Vu Sans Mono, monospace;
     font-size: 10.5pt;
-    white-space: pre-wrap;
-    margin: auto;
+    overflow-x: auto;
+    white-space: pre;
+    max-width: 500pt;
 }
 
 /* body { */
